Containe for bike img. Spacing fixes

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -48,7 +48,7 @@ a:hover {
 }
 
 article {
-    padding: 1rem;
+    padding: 0.5rem;
 }
 
 /*header*/
@@ -159,9 +159,8 @@ footer span {
     height: 240px;
 }
 
-/*img in About, Contact, Home*/
+/*img in About, Home, Contact*/
 .main-img,
-.main-img-bike,
 .main-img-home {
     display: block;
     margin-left: auto;
@@ -171,11 +170,23 @@ footer span {
     width: 327px;
 }
 
+.main-img-bike-container{
+    width: 327;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.main-img-bike{
+    margin-top: -39px;
+    margin-bottom: -39px;
+}
+
+
 /* specific styling for products page */
 .prodcontainer {
     max-width: 1200px;
     margin: 0 1rem;
-    padding: 1rem 1rem;
 }
 
 .prodcontainer img {
@@ -264,20 +275,24 @@ footer span {
         max-width: none !important;
         width: 269px;
         height: 436px;
-        margin-top: 9rem;
+        margin-top: 8rem;
     }
 
-    .main-img-bike {
-        width: auto;
+    .main-img-bike-container{
+        width: 360px;
         height: 321px;
-        margin-top: 9rem;
+        border-radius: 10px;
+    }
+    .main-img-bike {
+        width: 360px;
+        height: 321px;   
     }
 
     .main-img-home {
         max-width: none !important;
         width: 302px;
         height: 201px;
-        margin-top: 9rem;
+        margin-top: 8rem;
     }
 
 }
@@ -309,11 +324,26 @@ change prodcontainer for 3 columns*/
         margin-right: 1rem;
     }
 
-    .container img {
+    .products{
+        padding: 2rem 0;
+    }
+
+    .main-img, .main-img-home {
         max-width: none !important;
         width: 500px;
         height: 358px;
         margin-top: 8rem;
+    }
+
+    .main-img-bike-container{
+        width: 500px;
+        height: 446px;
+        border-radius: 10px;
+    }
+    
+    .main-img-bike {
+        width: 500px;
+        height: 446px;   
     }
 
     /* Products page */
@@ -328,6 +358,7 @@ change prodcontainer for 3 columns*/
 
     .prodcontainer img {
         width: 384px;
+        height: 255px;
     }
 
     .blend {
@@ -338,6 +369,7 @@ change prodcontainer for 3 columns*/
 
     h2 {
         font-size: 1.65rem;
+        line-height: 1.5;
     }
 
 }
